--- a/public/index.html
+++ b/public/index.html
@@ -43,14 +43,10 @@
       <div class="absolute h-64 w-full pin-b pin-l p-6">
         <h1 class="mb-2 font-oswald text-grey-lightest">Elanthia Online</h1>
         <p>This project has been taken down for now.</p>
-
-<p>Checkout our <a href="https://github.com/elanthia-online">other projects</a></p>
-
+        <p>Forum topics saved via the <a href="https://forums.archives.elanthia.online/topics/">archives</a>.</p>
+        <p>Checkout our <a href="https://github.com/elanthia-online">other projects</a>.</p>
       </div>
-      
     </div>
   </div>
-    
-
   </body>
 </html>
