--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,9 @@
       <div class="absolute h-64 w-full pin-b pin-l bg-grey-lighter opacity-15"></div>
       <div class="absolute h-64 w-full pin-b pin-l p-6">
         <h1 class="mb-2 font-oswald text-grey-lightest">Elanthia Online</h1>
-        <p>This project has been taken down for now.</p>
+        <p>The forums have been taken down for now.</p>
+
+<p>You can checkout the archive <a href="https://forums.archives.elanthia.online/topics/">here</a></p>
 
 <p>Checkout our <a href="https://github.com/elanthia-online">other projects</a></p>
 
